<resources>
    <string name="app_name">Human Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="email_empty">Enter email address!</string>
    <string name="email_invalid">Please add a valid email</string>
    <string name="password_empty">Password is empty!</string>
    <string name="password_invalid">Password must be at least 6 characters</string>

    <string name="employees_empty">No employees available or detected</string>
    <string name="employees_connection">Connect to internet to get employees</string>

    <string name="bonus">Bonus</string>
    <string name="holiday_bonus">Holiday Bonus</string>
    <string name="vacation">Vacation</string>
    <string name="total">Total</string>
    <string name="time">%d %s</string>
    <string name="years">years</string>
    <string name="one_year">1 year</string>
    <string name="less_year">Less than a year</string>
    <string name="days">days</string>
    <string name="day">1 day</string>
    <string name="prompt_salary">Daily salary</string>
    <string name="employees">Employees</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_cell_phone">Cellphone</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_reference_name">Reference name</string>
    <string name="prompt_reference_cellphone">Reference cellphone</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_folio">Folio</string>
    <string name="prompt_ssn">SSN (Social Security Number)</string>
    <string name="prompt_uprc">UPRC (Unique Population Registry Code)</string>
    <string name="prompt_ftr">FTR (Federal Taxpayer Register)</string>
    <string name="action_add_employee">Add employee</string>
    <string name="action_update_employee">Update employee</string>
    <string name="action_delete_employee">Delete employee</string>

    <string name="name_required">Name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="cellphone_required">Cellphone is required</string>
    <string name="address_required">Address is required</string>
    <string name="daily_salary_required">Daily salary is required</string>
    <string name="reference_name_required">Reference name is required</string>
    <string name="reference_cellphone_required">Reference cellphone is required</string>
    <string name="date_required">Date is required</string>
    <string name="country_required">Country is required</string>
    <string name="folio_required">Folio is required</string>
    <string name="ssn_required">Social Security Number is required</string>
    <string name="uprc_required">Unique Population Registry Code is required</string>
    <string name="ftr_required">Federal Taxpayer Register is required</string>
    <string name="daily_salary_error">Please give a valid daily salary</string>
    <string name="ok">OK</string>
    <string name="sign_out">Sign out</string>
    <string name="empty">No employees</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
